# zephyrproject

./: .gitignore  CMakeLists.txt  Kconfig  README.md  nrf52dk_nrf52832.overlay  prj.conf  west.yml
app/: CMakeLists.txt  Kconfig  prj.conf  west.yml
app/boards/: nrf52dk_nrf52832.overlay
app/dts/bindings/: zephyr-course-binding.yml
app/src/: main.c  main.cpp
boards/: nrf52dk_nrf52832.overlay
drivers/: blinker.c
dts/bindings/: zephyr-course-binding.yml
dts/bindings/input/: input-event-codes.h
include/: blinker.h
modules/: CMakeLists.txt  Kconfig
modules/hal_nordic/nrfx/: CMakeLists.txt
project_modules/: CMakeLists.txt
project_modules/modules/hal_nordic/nrfx/: CMakeLists.txt  Kconfig  zephyr_course_nrfx_temp.c
src/: main.cpp
zephyr/: module.yml
